Fix Java JIT backend semantic parity with QuestDB evaluator
Implement five semantic fixes in VectorFilterInterpreter so that all 115
CompiledFilterTest + CompiledFilterRegressionTest cases pass when the
Java backend replaces the native C++ JIT:

1. Integer null comparison: match Numbers.lessThan() semantics — strict
   operators (<, >) return false when either operand is NULL, non-strict
   operators (<=, >=) return true when both are NULL.

2. Short-circuit label scoping: resolve AND_SC/OR_SC jump targets
   per-instruction (nearest following END_SC) instead of per-label-index
   (globally last END_SC). Fixes chained IN() expressions that reuse
   label index 2.

3. Var-size null comparison: support STRING_HEADER_TYPE, BINARY_HEADER_TYPE,
   and VARCHAR_HEADER_TYPE in loadMemoryValue, validateType, and
   comparisonType. Reads string length via aux+data indirection, binary
   length, and varchar header from aux pages.

4. Float null propagation in arithmetic: check for NaN operands and
   zero divisor in F4/F8 arithmetic, producing NaN instead of IEEE 754
   ±Infinity. Matches QuestDB's DivDoubleFunction behavior.

5. Float null comparison for ordered operators: when both operands are
   NaN, LE/GE return true (IS NULL semantics) while LT/GT return false.

Also restore null-aware type coercion: INT_NULL→LONG_NULL in
coerceToLong, INT_NULL/LONG_NULL→NaN in coerceToDouble/coerceToFloat.

Update jit-ir-reference.md to correct Section 6.3 (NULL comparison
semantics were wrong for <=/>= operators), document the float division
divergence in Section 4.10, add label scoping guidance in Section 4.5,
and register the Java backend source files.

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>